WHITE-PAPER/reviewers/packages/v4/journal/PACKAGE_MANIFEST.md
# Review Package: JOURNAL

**Generated:** 2025-12-29 13:42:53
**Target Venue:** Nature Machine Intelligence
**Total Size:** 15.8 MB
**Total Files:** 55

---

## Description

Journal paper package (Nature MI, comprehensive)

---

## Reading Order

Start with these files in order:

1. `submissions/journal/README.md`
2. `submissions/blueprints/JOURNAL_BLUEPRINT.md`
3. `theory/MINIMUM_PUBLISHABLE_CLAIMS.md`
4. `theory/THEORY_SECTION.md`

---

## Contents

| Category | Files | Size |
|----------|-------|------|
| submissions/ | 5 files | 106.4 KB |
| blueprints/ | 2 files | 18.4 KB |
| theory/ | 4 files | 58.0 KB |
| guides/ | 4 files | 40.7 KB |
| references/ | 2 files | 21.3 KB |
| figures/ | 34 files | 15.5 MB |
| planning/ | 4 files | 41.4 KB |

**Total:** 55 files, 15.8 MB

---

## File Listing

### submissions/

- `submissions\journal\JOURNAL_PAPER_FINAL.md` (27.5 KB)
- `submissions\journal\NYQUIST_WHITE_PAPER_FINAL.md` (21.5 KB)
- `submissions\journal\README.md` (4.0 KB)
- `submissions\arxiv\NYQUIST_ARXIV_PAPER_FINAL.md` (36.8 KB)
- `submissions\arxiv\README.md` (16.6 KB)

### blueprints/

- `submissions\blueprints\ARXIV_BLUEPRINT.md` (10.0 KB)
- `submissions\blueprints\JOURNAL_BLUEPRINT.md` (8.4 KB)

### theory/

- `theory\B-CRUMBS.md` (16.4 KB)
- `theory\HYPOTHESES_AND_RESULTS.md` (18.8 KB)
- `theory\MINIMUM_PUBLISHABLE_CLAIMS.md` (10.1 KB)
- `theory\THEORY_SECTION.md` (12.7 KB)

### guides/

- `guides\MANIFEST.md` (7.7 KB)
- `guides\REPRODUCIBILITY_README.md` (10.2 KB)
- `guides\summary_statistics.md` (11.8 KB)
- `guides\UNIFIED_STATISTICS_REFERENCE.md` (11.0 KB)

### references/

- `references\references.bib` (14.4 KB)
- `references\references.md` (6.9 KB)

### figures/

- `figures\ascii\ascii_compression.md` (11.7 KB)
- `figures\ascii\ascii_evidence_chain.md` (5.9 KB)
- `figures\ascii\ascii_framework.md` (9.7 KB)
- `figures\ascii\ascii_triple_blind.md` (15.4 KB)
- `figures\ascii\ascii_vortex.md` (8.1 KB)
- `figures\ascii\ascii_workshop_abstract.md` (10.0 KB)
- `figures\ascii\ascii_workshop_contributions.md` (10.0 KB)
- `figures\conceptual\fig1_identity_manifold.py` (5.4 KB)
- `figures\conceptual\fig2_drift_field.py` (6.5 KB)
- `figures\conceptual\fig3_pipeline.py` (6.0 KB)
- `figures\conceptual\fig4_five_pillars.py` (5.8 KB)
- `figures\conceptual\meta\fig1_identity_manifold_Cosine.md` (4.9 KB)
- `figures\conceptual\meta\fig1_identity_manifold_Euclidean.md` (4.3 KB)
- `figures\conceptual\meta\fig3_pipeline_Euclidean.md` (8.4 KB)
- `figures\conceptual\meta\fig4_five_pillars_Euclidean.md` (5.9 KB)
- `figures\conceptual\pics\fig1_identity_manifold_CONCEPTUAL.png` (897.9 KB)
- `figures\conceptual\pics\fig2_drift_field_CONCEPTUAL.png` (504.8 KB)
- `figures\conceptual\pics\fig3_pipeline_CONCEPTUAL.png` (525.1 KB)
- `figures\conceptual\pics\fig4_five_pillars_CONCEPTUAL.png` (401.3 KB)
- `figures\experiments\run023\3d_attractor_basin.png` (1.8 MB)
- `figures\experiments\run023\combined_provider_dashboard.png` (195.0 KB)
- `figures\experiments\run023\context_damping_summary.png` (216.7 KB)
- `figures\experiments\run023\oobleck_control_treatment.png` (258.9 KB)
- `figures\experiments\run023\oobleck_thermometer.png` (135.7 KB)
- `figures\experiments\run023\pc_scatter.png` (223.4 KB)
- `figures\experiments\run023\perturbation_validation.png` (66.9 KB)
- `figures\experiments\run023\phase_portrait.png` (4.0 MB)
- `figures\experiments\run023\provider_clusters.png` (238.4 KB)
- `figures\experiments\run023\provider_comparison.png` (65.3 KB)
- `figures\experiments\run023\provider_fingerprint_radar.png` (353.6 KB)
- `figures\experiments\run023\stability_basin.png` (450.4 KB)
- `figures\experiments\run023\variance_curve.png` (75.7 KB)
- `figures\experiments\run023\vortex_identity_drain.png` (5.1 MB)
- `figures\visual_index.md` (7.8 KB)

### planning/

- `planning\METHODOLOGY_DOMAINS.md` (1.9 KB)
- `planning\NOVAS_OVERCLAIMING_PREVENTION.md` (3.7 KB)
- `planning\OPUS_REVIEW_BRIEF.md` (29.4 KB)
- `planning\PUBLICATION_PIPELINE_MASTER.md` (6.3 KB)

---

## What's NOT Included

- PDF files including 14MB arxiv PDF (use `--include-pdf` to add)
- Other publication path content
- Large binary files

---

## Review Instructions

Please review this package for:

1. **Accuracy of claims** - Are statements supported by evidence?
2. **Clarity of presentation** - Is the writing clear and accessible?
3. **Completeness of evidence** - Are key findings documented?
4. **Suggested improvements** - What would strengthen the paper?

Return feedback to: `WHITE-PAPER/reviewers/from_reviewers/{reviewer}/`

---

*Package extracted from WHITE-PAPER/ for Nature Machine Intelligence submission review.*